# octyl

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  changelog  rustfmt.toml
src/: action.rs  app.rs  buffer.rs  component.rs  compositor.rs  config.rs  document.rs  error.rs  event.rs  events.rs  geometry.rs  identifier.rs  input.rs  lib.rs  main.rs  math.rs  message.rs  term.rs  terminal.rs  tui.rs  util.rs  utils.rs  view.rs
src/component/: identifier.rs  mod.rs  tree.rs
src/components/: home.rs  logger.rs  mod.rs  root.rs
src/compositor/: component.rs  frame.rs  mod.rs
src/editor/: document.rs  mod.rs
src/terminal/: event.rs  mod.rs
