[package]
name = "octyl"
version = "0.1.0"
edition = "2021"

[dependencies]

# async
tokio = { version = "1.33", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"

# tui
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.24"

# error handling
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# util
lazy_static = "1.4"
circular-buffer = "0.1"
